# signature_processing_api

./: .gitignore  Dockerfile  app.py  architecture.py  pyproject.toml
processing/: casc_inf.py  casc_sup.py  centroids.py  esqueleta.py  esqueletiza.py  jaccard_paradig.py  jaccard_quest.py  main.py  plot_paradig.py  plot_quest.py  pressure.py  pruning.py  python_GAPE.rar  residuos.py  resize_all.py  rotate.py  rotate_gray.py
